# stl_task_decomposition

./: README.md  package.xml  setup.cfg  setup.py
config/: decomp_tasks.yaml  fixed_communications.yaml  initial_conditions.yaml  start_pos.yaml  tasks.yaml
launch/: launch_controllers.launch.py  launch_gazebo_and_manager.launch.py  launch_gazebo_and_robot_formation.py  launch_manager_and_controller.launch.py  one_file_to_launch_them_all.launch.py  sml_nexus_mas_gazebo.launch.py  stop_the_agents.launch.py
script/: builders.py  controller.py  decomposition_module.py  dynamic_backup.py  dynamics_module.py  graph_module.py  manager_node.py  plot_dynamic_agent_to_barrier.py  plots.py  plots_dynamic.py  stop_the_agents.py  temporary_backup.py  test_pick.py  test_placenew.py  thread_test.py
