<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stl_task_decomposition</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bbrandin@kth.se">benjaminb</maintainer>
  <license>TODO: License declaration</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>copy</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>typing</depend>
  <depend>numpy</depend>
  <depend>casadi</depend>
  <depend>collections</depend>
  <depend>networkx</depend>
  <depend>matplotlib</depend>
  <depend>yaml</depend>
  <depend>dataclasses</depend>
  <depend>iterools</depend>
  <depend>abc</depend>
  <depend>os</depend>
  <depend>stl_decomposition_msgs</depend>
  <depend>sml_nexus_description_ros2</depend>
  <depend>xacro</depend>
  <depend>gazebo_ros_pkgs</depend>




  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
